# project-backend

./: .gitignore  alembic.ini  pyproject.toml  runserver.py  writeInDb.py
migrations/: env.py
migrations/versions/: 034e8c573243_create_transaction_table.py  0e99e6b88449_create_transaction_table.py  57ad5aa8922e_create_transaction_table.py  72e7ebd4de6a_create_user_table.py  8548ea17631d_create_user_table.py  b48c376435ee_create_token_table.py  c7b3f42daeef_create_token_table.py  c8f223bde1a3_create_token_table.py  caf8c80200b2_create_user_table.py
src/: __init__.py  config.py  tokens.csv  transactions.csv
src/db/: database.sqlite  main.py  models.py
src/routes/: auth.py  transaction.py  user.py
src/schemes/: auth.py  token.py  transaction.py  user.py
src/services/: auth.py  transaction.py  user.py
src/tests/: conftest.py  test_auth.py  test_user.py
src/utils/: dbcheck.py  security.py
